--- a/src/assets/sass/components/_nav.scss
+++ b/src/assets/sass/components/_nav.scss
@@ -1,4 +1,5 @@
 $menu-width: calc(100% - 3.64rem);
+$nav-padding: 0.15em 0.36em;
 
 // General navigation styles
 nav ul {
@@ -8,7 +9,7 @@ nav ul {
 }
 
 nav a {
-  color: rgba($text-color, .64);
+  color: rgba($text-color, 0.64);
   text-decoration: none;
   display: block;
 
@@ -25,7 +26,8 @@ nav a {
     header,
     main {
       @include transform(translate3d($menu-width, 0, 0));
-      @include transition(transform .36s);
+
+      @include transition(transform 0.36s);
     }
 
     main {
@@ -41,19 +43,21 @@ nav a {
   }
 
   &.nav--double {
-    padding-top: ($nav-height * 2);
+    padding-top: $nav-height * 2;
   }
 }
 
 // Nav bar inside the app
 .scope--inside {
   $nav-transition: 'background-color .64s, box-shadow .36s, height .36s';
+
   // 3D Menu Trigger
   $cube: 1.36rem;
 
   .nav--primary,
   .nav--secondary {
     @include transition(unquote($nav-transition));
+
     // box-shadow: 0 1px 0 rgba($nav-color, .11);
     color: $nav-color;
     height: $nav-height;
@@ -63,14 +67,15 @@ nav a {
 
   // Helper nav
   .nav--secondary {
-    @include transition(transform .36s, unquote($nav-transition));
+    @include transition(transform 0.36s, unquote($nav-transition));
+
     z-index: 2;
   }
 
   .nav--white &:not(.scrolled):not(.nav--show-menu) {
     .nav--primary,
     .nav--secondary {
-      box-shadow: 0 1px 0 rgba($white, .22);
+      box-shadow: 0 1px 0 rgba($white, 0.22);
       color: $white;
     }
   }
@@ -88,6 +93,7 @@ nav a {
     padding: .5rem;
     position: absolute;
     top: 50%;
+
     // line-height: 1;
 
     &:focus,
@@ -99,12 +105,15 @@ nav a {
 
   .nav__icon--back {
     @include transform(translate(0%, -50%));
+
     left: .5rem;
   }
 
   .nav__icon--logo {
     @include transform(translate(-50%, -50%));
-    @include transition(opacity .36s);
+
+    @include transition(opacity 0.36s);
+
     font-size: $nav-height / 2;
     left: 50%;
     opacity: .22;
@@ -112,7 +121,9 @@ nav a {
 
   .nav__icon--inbox {
     @include transform(translate(0%, -50%));
+
     @include size($nav-height - $cube);
+
     border-radius: 50%;
     line-height: 1;
     right: 1rem;
@@ -129,7 +140,9 @@ nav a {
 
       &::after {
         @include transform(translate(-50%, -50%));
-        @include animation(intro-scale .64s .36s $ease-out-back forwards, attention 10s 3s $ease-out-back infinite);
+
+        @include animation(intro-scale 0.64s 0.36s $ease-out-back forwards, attention 10s 3s $ease-out-back infinite);
+
         background-color: $white;
         border: 5px solid $alert-color;
         border-radius: 10px;
@@ -146,27 +159,35 @@ nav a {
 
       @at-root {
         @include keyframes(intro-scale) {
-          0% { @include size(0);
+          0% {
+            @include size(0);
           }
 
-          100% { @include size(16px);
+          100% {
+            @include size(16px);
           }
         }
 
+
         @include keyframes(attention) {
-          0% { @include size(16px);
+          0% {
+            @include size(16px);
           }
 
-          5% { @include size(10px);
+          5% {
+            @include size(10px);
           }
 
-          10% { @include size(18px);
+          10% {
+            @include size(18px);
           }
 
-          11% { @include size(16px);
+          11% {
+            @include size(16px);
           }
 
-          100% { @include size(16px);
+          100% {
+            @include size(16px);
           }
         }
       }
@@ -174,19 +195,23 @@ nav a {
   }
 
   .nav__menu-trigger {
-    @include transition(.36s);
+    @include transition(0.36s);
+
     @include transform(translate(0%, -50%));
-    height: ($nav-height - $cube);
+
+    height: $nav-height - $cube;
     border-radius: 50%;
     left: .5rem;
     outline: none;
     position: absolute;
     top: 50%;
-    width: ($nav-height - $cube);
+    width: $nav-height - $cube;
 
     .helper__nav-cube-canvas {
-      @include transform(translate(-5%, -50%) scale(.5));
+      @include transform(translate(-5%, -50%) scale(0.5));
+
       @include perspective(5000px);
+
       height: 2 * $cube;
       left: 0;
       right: 0;
@@ -198,6 +223,7 @@ nav a {
 
     .nav__icon-cube {
       @include transform(translateZ($cube / 2) rotateX(0deg));
+
       height: 2 * $cube;
       position: absolute;
       transition: transform .36s .36s;
@@ -218,6 +244,7 @@ nav a {
 
     .nav__icon--menu-open {
       @include transform(translateZ(-$cube / 2) rotateX(0deg));
+
       opacity: 1;
 
       &::before {
@@ -227,6 +254,7 @@ nav a {
 
     .nav__icon--menu-close {
       @include transform(translateZ(0) rotateX(90deg));
+
       opacity: 0;
     }
 
@@ -242,9 +270,9 @@ nav a {
       }
     }
   }
+
   // Nav states
   &.device--mobile .scrolled {
-
     .nav__menu-trigger,
     .nav__icon--inbox {
       background-color: $white;
@@ -264,11 +292,11 @@ nav a {
     }
 
     .nav--secondary {
-      height: ($nav-height - .64);
+      height: $nav-height - 0.64;
     }
 
     .nav__context {
-      line-height: ($nav-height - .64);
+      line-height: $nav-height - 0.64;
     }
   }
 
@@ -280,7 +308,6 @@ nav a {
 }
 
 .nav__main-menu {
-
   .device--mobile & {
     background-color: $menu-background-color;
     height: 100vh;
@@ -298,7 +325,7 @@ nav a {
   }
 
   .nav__spacer {
-    background-color: rgba(dynamic-color($brand-color), .11);
+    background-color: rgba(dynamic-color($brand-color), 0.11);
     height: 1px;
     margin: .64rem 0;
   }
@@ -313,9 +340,11 @@ nav a {
       font-size: .88rem;
     }
 
+
     @include on-event {
       color: $black;
     }
+
 
     &[class^='rg-']::before {
       color: $menu-icons-color;
@@ -330,6 +359,7 @@ nav a {
 
   .nav__account {
     @include clearfix;
+
     position: relative;
   }
 
@@ -348,6 +378,7 @@ nav a {
 
   .nav__avatar {
     @include transform(translateY(-50%));
+
     height: 4rem;
     position: absolute;
     right: 1rem;
@@ -366,6 +397,7 @@ nav a {
 
       img {
         @include transform(translate3d(-50%, 0, 0));
+
         display: block;
         left: 50%;
         position: absolute;
@@ -379,7 +411,6 @@ nav a {
 
 // Outside scope navigation
 .scope--outside {
-  $nav-padding: .15em .36em;
 
   nav a {
     padding: $nav-padding;
@@ -388,6 +419,7 @@ nav a {
   // Main Navigation
   .nav__main-menu--public {
     @include clearfix;
+
     display: block;
     padding: 1rem 0;
   }
@@ -396,6 +428,7 @@ nav a {
     display: block;
 
     ul {}
+
     li {
       display: inline-block;
       margin: 0 1rem;
@@ -409,6 +442,7 @@ nav a {
     @include respond-to('tablet') {
       display: block;
     }
+
 
     li {
       margin-left: 0;
@@ -434,6 +468,7 @@ nav a {
 
   .main-menu--public__logo {
     @include transform(translate(0, -50%));
+
     top: 53.6%;
     left: 1rem;
     display: block;
@@ -445,70 +480,13 @@ nav a {
 
     @include respond-to('tablet') {
       @include transform(translate(-50%, -50%));
+
       left: 50%;
     }
 
+
     a::before {
       font-size: $ico-size-m;
-    }
-  }
-
-  // Footer navigation
-  .nav__footer-menu--public {
-    @include clearfix;
-
-    ul {}
-    li {
-      display: inline-block;
-      margin: .15rem .5rem;
-
-      @include respond-to('tablet') {
-        margin: 0 .36rem;
-      }
-    }
-
-    a {
-      color: transparentize($white, .36);
-
-      @at-root .nav__footer-menu--public a {
-        @include on-event($scope: '.device--no-touch.scope--outside') {
-          color: $white;
-        }
-      }
-    }
-  }
-
-  .footer-menu--public--left {
-    display: block;
-
-    @include respond-to('tablet') {
-      float: left;
-      li {
-        margin-left: 0;
-      }
-    }
-  }
-
-  .footer-menu--public--right {
-    display: block;
-    margin-top: 1rem;
-
-    @include respond-to('tablet') {
-      float: right;
-      margin-top: 0;
-
-      li {
-        margin-right: 0;
-      }
-    }
-  }
-
-  .footer__copyright p {
-    margin-top: 1rem;
-    padding: $nav-padding;
-
-    @include respond-to('phablet') {
-      margin-top: 0;
     }
   }
 
@@ -516,10 +494,76 @@ nav a {
     header {
       z-index: 1;
     }
+
     main {
       z-index: 0;
       padding-top: 6rem;
       margin-top: -6rem;
     }
+  }
+}
+
+// Footer navigation
+.nav__footer-menu--public,
+.nav__footer-menu--inside {
+  @include clearfix;
+
+  ul {}
+
+  li {
+    display: inline-block;
+    margin: .15rem .5rem;
+
+    @include respond-to('tablet') {
+      margin: 0 .36rem;
+    }
+  }
+
+  a {
+    color: transparentize($white, 0.36);
+
+    @at-root .nav__footer-menu--public a,
+    .nav__footer-menu--inside a {
+      @include on-event($scope: '.device--no-touch.scope--outside') {
+        color: $white;
+      }
+    }
+  }
+}
+
+.footer-menu--public--left,
+.footer-menu--inside--left {
+  display: block;
+
+  @include respond-to('tablet') {
+    float: left;
+
+    li {
+      margin-left: 0;
+    }
+  }
+}
+
+.footer-menu--public--right,
+.footer-menu--inside--right {
+  display: block;
+  margin-top: 1rem;
+
+  @include respond-to('tablet') {
+    float: right;
+    margin-top: 0;
+
+    li {
+      margin-right: 0;
+    }
+  }
+}
+
+.footer__copyright p {
+  margin-top: 1rem;
+  padding: $nav-padding;
+
+  @include respond-to('phablet') {
+    margin-top: 0;
   }
 }
