--- a/src/assets/sass/layout/_main.scss
+++ b/src/assets/sass/layout/_main.scss
@@ -9,7 +9,7 @@
   }
 
   &.scope--inside {
-    padding: 0 1rem 10rem;
+    padding: 0 1rem;
 
     main,
     header {
@@ -41,6 +41,8 @@
     }
 
     main {
+      padding-bottom: 2rem;
+
       @include respond-to('tablet') {
         @include grid--cell-width('8');
         @include grid--cell-push('1');
