--- a/src/assets/sass/base/_grid.scss
+++ b/src/assets/sass/base/_grid.scss
@@ -5,6 +5,10 @@
   position: relative;
   padding: 0 $gutter-size;
 
+  @include when-inside('.layout--card' or '.layout--card-') {
+    padding: 0;
+  }
+
   > .grid__item {
     @include flex(0 1 auto);
     @include grid--cell-width('12');
@@ -19,12 +23,16 @@
       &.grid__xs-span--#{$i} {
         @include grid--cell-width(#{$i});
 
-        &:nth-child(#{ceil(12 / $i)}n) {
+        &:nth-of-type(#{ceil(12 / $i)}n) {
           margin-right: 0;
 
           @include respond-to('phone-long') {
             margin-right: inherit;
           }
+        }
+
+        &:nth-of-type(even) {
+          margin-right: $gutter-size;
         }
       }
 
@@ -37,7 +45,7 @@
         &.grid__span--#{$i} { @include grid--cell-width('6');}
       }
 
-      &:nth-child(even) {
+      &:nth-of-type(even) {
         margin-right: 0;
       }
     }
@@ -47,7 +55,7 @@
         &.grid__span--#{$i} {
           @include grid--cell-width(#{$i});
 
-          &:nth-child(#{ceil(12 / $i)}n) { margin-right: 0; }
+          &:nth-of-type(#{ceil(12 / $i)}n) { margin-right: 0; }
         }
 
         &.grid__push--#{$i} { @include grid--cell-push(#{$i}); }
@@ -88,7 +96,7 @@
           &.grid__span--#{$i} {
             @include grid--cell-width(#{$i});
 
-            &:nth-child(#{floor(12 / $i)}n) { margin-right: 0; }
+            &:nth-of-type(#{floor(12 / $i)}n) { margin-right: 0; }
           }
           &.grid__push--#{$i} { @include grid--cell-push(#{$i}); }
           &.grid__pull--#{$i} { @include grid--cell-pull(#{$i}); }
