--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -45,11 +45,11 @@
 'components/rollout';
 
 // 6. Page-specific styles
-// 'pages/home',
 @import
 'pages/profile',
 'pages/campaign',
 'pages/diary',
+'pages/home',
 'pages/templates',
 'pages/sign',
 'pages/notifs';
