--- a/src/assets/sass/components/_inputs.scss
+++ b/src/assets/sass/components/_inputs.scss
@@ -10,8 +10,9 @@
 
   // NOTE Override autcomplete banana yellow... the best i could.
   &:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0px 1000px $comp-color inset !important;
+    // -webkit-box-shadow: 0 0 0px 1000px $brand-color inset !important;
     -webkit-text-fill-color: $white !important;
+    -webkit-box-shadow: inset 0 0 0px 1000px$brand-color, 0 1px rgba(0, 0, 0, .16)!important;
   }
 }
 
