--- a/src/assets/sass/base/_typography.scss
+++ b/src/assets/sass/base/_typography.scss
@@ -29,15 +29,16 @@ h4 {
   }
 
   &.headline {
+    color: $brand-color-darker;
     line-height: 1.5;
-    padding-bottom: 2rem;
+    padding-bottom: 1.5rem;
     margin-bottom: 2rem;
     position: relative;
 
+
     &::after {
-      @include size(5rem .36rem);
-      background-color: $accent-color;
-      border-radius: .64rem;
+      @include size(5rem 2px);
+      background-color: $brand-color-lighter;
       bottom: 0;
       content: '';
       left: 0;
@@ -69,18 +70,23 @@ h1 {
 
 h2 {
   font-size: $header-2;
-  // counter-reset: subsection;
 
   .content--small-type & {
     font-size: $header-3;
   }
 
   .content--terms-and-condition & {
-    counter-reset: subsection;
 
     &::before {
       counter-increment: section;
       content: counter(section, upper-roman) '. ';
+    }
+  }
+  .content--privacy-policy & {
+
+    &::before {
+      counter-increment: section;
+      content: counter(section) '. ';
     }
   }
 }
@@ -119,6 +125,20 @@ li {
   .content--terms-and-condition & {
     @include respond-to('tablet') {
       text-align: justify;
+    }
+  }
+  .content--privacy-policy & {
+    list-style-type: none !important;
+    @include respond-to('tablet') {
+      text-align: justify;
+    }
+  }
+}
+a {
+  .content--privacy-policy & {
+    color: $black !important;
+    &:hover {
+      color: $brand-color!important;
     }
   }
 }
