--- a/src/assets/sass/base/_grid.scss
+++ b/src/assets/sass/base/_grid.scss
@@ -17,7 +17,7 @@
     position: relative;
     margin-bottom: $gutter-size;
     margin-right: 0;
-    overflow: hidden;
+    // overflow: hidden;
 
     @for $i from 1 through 12 {
       &.grid__xs-span--#{$i} {
