--- a/src/assets/sass/components/_images.scss
+++ b/src/assets/sass/components/_images.scss
@@ -6,6 +6,7 @@
   overflow: hidden;
   background-color: $black;
   color: $white;
+  position: relative;
 
   @include on-event {
     background-color: $black;
@@ -23,19 +24,23 @@
 }
 
 .image--cover {
-  @include transform($move-to-center scale(1.1));
-  @include transition(transform $transition-l, opacity $transition);
+  @include transform($move-to-center scale(1.01));
+  @include transition(opacity $transition);
   width: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
 
-  @include when-inside('.device--no-touch a.cover__container:hover') {
-    @include transform($move-to-center scale(1.25));
-  }
-
   &.cover--width { height: auto; width: 100%; }
   &.cover--height { height: 100%; width: auto; }
+}
+
+.image--full-width {
+  min-height: 100%;
+  min-width: 100%;
+  max-width: none;
+  width: auto;
+  height: auto;
 }
 
 .dev__placeholder-image {
@@ -56,5 +61,25 @@
     left: 0;
     width: 100%;
     height: 100%;
+  }
+}
+
+.video__container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+
+  video {
+    @include transform(translate(-50%,-50%));
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
   }
 }
